--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -9,7 +9,7 @@ env:
   LOCATION: westeurope
   TEMPLATE-FILE: infra/webapp.bicep
   SUBSCRIPTION-ID: eb76fb87-6065-4389-86b2-13fe91134e4b
-  WEBAPP-NAME: eshoponweb-webapp-01
+  WEBAPP-NAME: eshoponweb-0126022025
 
 
 jobs:
